<resources>
    <string name="app_name">Printer</string>
    <string name="demo_title">Printer</string>
    <string name="bluetooth_title">Bluetooth Printer</string>
    <string name="upc_a_default">123456789012</string>
    <string name="upc_e_default">12345678</string>
    <string name="ean13_default">123456789012</string>
    <string name="ean8_default">12345678</string>
    <string name="code39_default">1234567890123456789</string>
    <string name="itf_default">123456789012</string>
    <string name="codabar_default">1234567890</string>
    <string name="code93_default">12345678901234567890</string>
    <string name="code128_default">123456789012</string>
    <string name="upc_a_length">长度范围：11.12</string>
    <string name="upc_e_length">长度范围：7.8.11.12</string>
    <string name="ean13_length">长度范围：12.13</string>
    <string name="ean8_length">长度范围：7.8</string>
    <string name="code39_length">长度范围：1--60</string>
    <string name="itf_length">长度范围：1--13</string>
    <string name="codabar_length">长度范围：1--10</string>
    <string name="code93_length">长度范围：1--60</string>
    <string name="code128_length">长度范围：1--80</string>
    <string name="jxit_printer">Printer</string>
    <string name="send_print">发送打印</string>
    <string name="barcode1d_content">123456789012</string>
    <string name="barcode1d_height">80</string>
    <string name="barcode1d_hri_locotion">HRI位置：</string>
    <string name="barcode1d_hri_font">HRI字体：</string>
    <string name="barcode1d_test">一维条码测试</string>
    <string name="restore_default">恢复默认</string>
    <string name="barcode1d_width">条码宽度：</string>
    <string name="barcode1d_type">条码类型：</string>
    <string name="tv_barcode1d_height">条码高度：</string>
    <string name="tv_barcode1d_height_scope">范围（0~255）</string>
    <string name="input_barcode1d_content">请输入条码内容：</string>
    <string name="select_barcode1d_param">请选择条码参数：</string>
    <string name="barcode2d_content">123456789012</string>
    <string name="barcode_2d_error_correction_level">2</string>
    <string name="barcode2d_version">3</string>
    <string name="barcode2d_test">二维条码测试</string>
    <string name="tv_barcode2d_version">图形版本号：</string>
    <string name="enlargement_times">放大倍数：</string>
    <string name="barcode2d_type">条码类型：</string>
    <string name="tv_barcode_2d_error_correction_level">纠错等级：</string>
    <string name="tv2_barcode_2d_error_correction_level">范围（0-4）</string>
    <string name="tv2_barcode2d_version_scope">范围（0~20）</string>
    <string name="input_barcode2d_content">请输入条码内容：</string>
    <string name="select_barcode2d_param">请选择二维码参数：</string>
    <string name="graphic_test">图片测试</string>
    <string name="open_camera">打开摄像头</string>
    <string name="select_photo">选择相册</string>
    <string name="out_of_line_mode">离线模式</string>
    <string name="refresh">刷新</string>
    <string name="update">更新</string>
    <string name="text_underline">下划线</string>
    <string name="text_bold">加粗</string>
    <string name="text_facetype">字体类型：</string>
    <string name="text_character_width_times">字宽倍数：</string>
    <string name="text_character_height_times">字高倍数：</string>
    <string name="text_alignment">对齐方式：</string>
    <string name="text_print_test">文本打印测试!</string>
    <string name="text_test">文本测试</string>
    <string name="input_text_content">请输入文本内容：</string>
    <string name="select_param">请选择参数：</string>
    <string name="clockwise_rotate">顺时针旋转：</string>
    <string name="text_reverse">黑白反显</string>
    <string name="char_width">1</string>
    <string name="char_height">1</string>
    <string name="jxit_usb_printer">USB Printer</string>
    <string name="available_equipment">可用设备</string>
    <string name="paired_equipment">已配对的设备</string>
    <string name="on_off">开关</string>
    <string name="scan_connect">扫描连接</string>
    <string name="search_equipment">搜索设备</string>
    <string name="bluetooth">蓝牙</string>
</resources>
