<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jxit.jxitprinter1_6.activity.Barcode1dActivity"
    android:id="@+id/mFragmentBarcode1D"
    android:background="@android:color/background_light">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/barcode_1d_bar"
        android:background="@color/orange_normal"
        app:navigationIcon="@drawable/arrow_left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:id="@+id/tv_text_title"
            android:text="@string/barcode1d_test" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/select_barcode1d_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_barcode_1d_parm"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/barcode_1d_bar" />

    <TextView
        android:text="@string/barcode1d_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_parm"
        android:id="@+id/tv_barcode_1d_type"
        android:textSize="16sp"
        android:gravity="center_vertical|center"
        android:padding="5dp"
        android:layout_margin="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_barcode_1d_type"
        android:id="@+id/sp_barcode_1d_type"
        android:layout_toEndOf="@+id/tv_barcode_1d_type"
        android:layout_alignTop="@+id/tv_barcode_1d_type"
        android:padding="5dp"
        android:layout_toRightOf="@+id/tv_barcode_1d_type" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sp_barcode_1d_type"
        android:layout_toRightOf="@+id/sp_barcode_1d_type"
        android:layout_toEndOf="@+id/sp_barcode_1d_type"
        android:id="@+id/tv_barcode1d_type_info"
        android:layout_alignBottom="@+id/tv_barcode_1d_type" />

    <TextView
        android:text="@string/barcode1d_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_type"
        android:id="@+id/tv_barcode_1d_width"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp" />

    <Spinner
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/sp_barcode_1d_width"
        android:layout_alignBottom="@+id/tv_barcode_1d_width"
        android:layout_alignTop="@+id/tv_barcode_1d_width"
        android:layout_toRightOf="@+id/tv_barcode_1d_width"
        android:padding="5dp"
        android:layout_toEndOf="@+id/tv_barcode_1d_width" />

    <TextView
        android:text="@string/tv_barcode1d_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_width"
        android:id="@+id/tv_barcode_1d_height"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="5dp" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/tv_barcode_1d_width"
        android:layout_toEndOf="@+id/tv_barcode_1d_height"
        android:id="@+id/et_barcode_1d_height"
        android:layout_alignBottom="@+id/tv_barcode_1d_height"
        android:layout_alignTop="@+id/tv_barcode_1d_height"
        android:text="@string/barcode1d_height"
        android:padding="5dp"
        android:background="@drawable/edittext_shape"
        android:textSize="14sp"
        android:maxLength="3"
        android:layout_toRightOf="@+id/tv_barcode_1d_height" />

    <TextView
        android:text="@string/tv_barcode1d_height_scope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_width"
        android:id="@+id/tv_barcode_1d_height_scope"
        android:layout_alignBottom="@+id/tv_barcode_1d_height"
        android:layout_alignTop="@+id/tv_barcode_1d_height"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_toEndOf="@+id/et_barcode_1d_height"
        android:layout_toRightOf="@+id/et_barcode_1d_height" />

    <TextView
        android:text="@string/tv_barcode1d_height_scope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_width"
        android:id="@+id/tv_barcode1d_height_scope"
        android:layout_alignBottom="@+id/tv_barcode_1d_height"
        android:layout_alignTop="@+id/tv_barcode_1d_height"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_toEndOf="@+id/et_barcode_1d_height"
        android:layout_toRightOf="@+id/et_barcode_1d_height"/>

    <TextView
        android:text="@string/barcode1d_hri_locotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode_1d_height"
        android:id="@+id/tv_HRI_position"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_HRI_position"
        android:layout_toEndOf="@+id/tv_HRI_position"
        android:id="@+id/sp_HRI_position"
        android:layout_alignTop="@+id/tv_HRI_position"
        android:padding="5dp"
        android:layout_toRightOf="@+id/tv_HRI_position" />

    <TextView
        android:text="@string/barcode1d_hri_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_HRI_position"
        android:id="@+id/tv_HRI_font"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_margin="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:id="@+id/sp_HRI_font"
        android:layout_toRightOf="@+id/tv_HRI_font"
        android:layout_alignTop="@+id/tv_HRI_font"
        android:layout_alignBottom="@+id/tv_HRI_font"
        android:layout_marginRight="70dp"
        android:layout_toEndOf="@+id/tv_HRI_font" />

    <TextView
        android:text="@string/input_barcode1d_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_HRI_font"
        android:id="@+id/tv_barcode_1d_content"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_margin="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode1d_content"
        android:ems="10"
        android:layout_below="@+id/tv_barcode_1d_content"
        android:id="@+id/et_barcode_1d_content"
        android:background="@drawable/edittext_shape"
        android:textSize="14sp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:maxLength="60"
        android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM,./;'[]\`-=./*-+~!@#$%^&amp;*()_+: >?{}|"
        android:maxLines="2"
        android:inputType="" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_barcode_1d_content"
        android:layout_margin="5dp"
        android:id="@+id/ll_barcode_1d"
        style="?android:attr/buttonBarStyle">

        <Button
            android:text="@string/send_print"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/btn_barcode_1d_send"
            android:layout_weight="1"
            android:background="@drawable/click_selector"
            android:layout_margin="5dp"
            android:padding="5dp"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:text="@string/restore_default"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/btn_barcode_1d_default"
            android:layout_weight="1"
            android:background="@drawable/click_selector"
            android:layout_margin="5dp"
            android:padding="5dp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>
